--- a/app/css/main.css
+++ b/app/css/main.css
@@ -292,45 +292,134 @@ textarea {
   -webkit-appearance: button;
   font: inherit; }
 
-*:focus {
-  outline: none; }
-
-#img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%; }
-
-.coverphoto {
-  width: 100%;
-  height: 120px;
-  background: url("../images/background.jpg");
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+body {
   position: relative; }
-  .coverphoto .profile_picture {
-    width: 110px;
-    height: 110px;
-    background: white;
-    position: absolute;
-    top: 65px;
-    left: 40px;
-    border-radius: 100%;
-    background-image: url("../images/profile.png");
-    background-size: 100% 100%;
-    padding: 7px;
-    border: 4px solid white; }
+  body .container {
+    position: relative;
+    margin: auto;
+    min-width: 320px; }
+    body .container #img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%; }
+    body .container .coverphoto {
+      width: 100%;
+      height: 120px;
+      background: url("../images/background.jpg");
+      border-top-right-radius: 5px;
+      border-top-left-radius: 5px;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      position: relative; }
+      body .container .coverphoto .profile_picture {
+        width: 110px;
+        height: 110px;
+        background: white;
+        position: absolute;
+        top: 65px;
+        left: 40px;
+        border-radius: 100%;
+        background-image: url("../images/profile.png");
+        background-size: 100% 100%;
+        padding: 7px;
+        border: 4px solid white; }
+    body .container .isRed {
+      transition: all 1s ease;
+      border: 1px solid #ff1e49; }
+      body .container .isRed .glyphicon {
+        transition: all 1s ease;
+        color: #ff1e49; }
+    body .container #file-upload {
+      min-width: 155px;
+      text-indent: -9999px;
+      color: transparent; }
+    body .container #val {
+      position: absolute;
+      top: 0;
+      left: 40px;
+      right: 0;
+      height: 34px;
+      line-height: 34px;
+      padding-left: 15px;
+      z-index: 2;
+      cursor: pointer; }
+      body .container #val:hover {
+        background: #e6e6e6; }
+    body .container .error {
+      color: #ff1e49;
+      display: none; }
+    body .container #success_message {
+      display: none; }
+  body .overlay {
+    pointer-events: none;
+    background-color: rgba(149, 197, 51, 0.9);
+    transition: all 500ms ease-in-out;
+    opacity: 0; }
+    body .overlay.is-open {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 99;
+      border-radius: 5px;
+      opacity: 1;
+      pointer-events: auto; }
+      body .overlay.is-open .modal {
+        transform: translate(0px, 0px);
+        display: block; }
+    body .overlay .modal {
+      transform: translate(0px, -200px);
+      transition: all 500ms cubic-bezier(0.25, 0.35, 0, 1.74);
+      min-width: 300px;
+      max-width: 700px;
+      background: white;
+      padding: 30px;
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+      position: relative;
+      display: none;
+      top: 25%; }
+      body .overlay .modal .graphic {
+        width: 100%;
+        height: 60px;
+        background: url("../images/background.jpg");
+        background-position: -120px;
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        position: relative; }
+      body .overlay .modal .close-btn {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 30px;
+        width: 30px;
+        font-size: 30px;
+        text-align: center;
+        line-height: 30px;
+        cursor: pointer;
+        transition: all 100ms ease-in-out; }
+        body .overlay .modal .close-btn:hover {
+          transform: scale(1.2); }
+      body .overlay .modal .text-box {
+        max-width: 80%; }
+        body .overlay .modal .text-box .lead {
+          color: black;
+          font-size: 30px;
+          line-height: 1.3; }
+          body .overlay .modal .text-box .lead i {
+            padding: 5px 0 0 10px; }
+        body .overlay .modal .text-box p {
+          color: #999;
+          font-size: 18px; }
 
-.isRed {
-  transition: all 1s ease;
-  border: 1px solid #ff1e49; }
-  .isRed .glyphicon {
-    transition: all 1s ease;
-    color: #ff1e49; }
+@media screen and (min-width: 720px) {
+  body .overlay .modal {
+    left: 6%; } }
 
-.error {
-  color: #ff1e49;
-  display: none; }
+@media screen and (min-width: 992px) {
+  body .overlay .modal {
+    left: 25%; } }
 
-#success_message {
-  display: none; }
+@media screen and (min-width: 992px) {
+  .container .overlay .modal {
+    transform: translate(25vh, 25vh); } }
